--- a/missions.yml
+++ b/missions.yml
@@ -3,18 +3,12 @@ mission_template: # 任务ID, 必须唯一, 可自定义.
   start-time: '<time[2020/12/1]>' # 任务开始时间, 超过此时间后任务才可由trigger中的设定项激活.
   expire-time: '<time[2020/12/7]>' # 任务结束时间, 以Denizen的TimeTag表示. 超过此时间后任务会立刻终止作废, steps中未完成项的奖励不可再获得.
   allow-repeat: false # 任务是否可重复. (*必填*)
-  trigger: 'none' # 激活任务的方式, 任务将从steps的首项开始. 选填项: none(只能由特定事件激活), join(加入游戏时自动激活), dialog(在对话框中选择指定项后获得), search(搜索一件物体后激活), break|place(破坏|放置方块后激活), join|leave(进入|离开某一Denizen Cuboid后激活)... 更多触发项正在持续追加中, 欢迎补充. (*必填*)
+  trigger: 'manual' # 激活任务的方式, 任务将从steps的首项开始. 选填项: manual(只能由其它系统激活), join(加入游戏时自动激活), dialog(在对话中选择指定项后获得), search(搜索一件物体后激活), break|place(破坏|放置方块后激活), join|leave(进入|离开某一Denizen Cuboid后激活)... 更多触发项正在持续追加中, 欢迎补充. (*必填*)
   steps: # 任务步骤. (*必填*)
-    '1': # 任务序号, 必须为非0自然数, 并按照升序排列. 如希望任务完成后再给予玩家奖励, 只为steps中最后一项设置rewards即可. (*必填*)
+    '1': # 任务序号, 必须为非0自然数, 并按照升序排列. 如希望任务完成后再给予玩家奖励, 只为steps中最后一项设置rewards即可. 每个步骤都有三种可能的结果: finish(完成当前步骤并领取奖励, 然后进入下一步骤), pass(跳过当前步骤, 忽略奖励, 直接进入下一步骤), fail(忽略当前步骤奖励, 并导致整个任务由此中断). (*必填*)
       name: '与卡车司机对话' # 任务步骤名称 (*必填*)
-      type: 'dialog' # 该步骤任务类型. 此处代表对话类型任务, 在对话框中选择指定项后即可获得奖励. (*必填*)
-      dialog: 'kachesiji_hello' # 填写对话框ID.
-      selection: # 必须为列表格式, 对话框中选择任一项后即可完成步骤, 并进入下一步.
-      - '1'
-      - '2'
-      - '4'
-      selection-others: 'pass' # 在该对话框中若选择其他项, 任务将如何进展. 选填项: fail(任务失败), pass(跳过该步骤并忽略奖励, 直接进入下一步骤), repeat(重置该步骤).
-      rewards: # 完成该步骤后可获得的奖励
+      type: 'manual' # 该步骤任务类型. 此处代表需配合其他系统才能完成的步骤, 即玩家无法自主完成的步骤, 例如对话中选择指定选项后才能完成的任务步骤. (*必填*)
+      rewards: # 完成该步骤后可获得的奖励.
         points: '600' # 通行证点数奖励. 负数代表扣除.
         friendship: # NPC好感度变化. 负数代表扣除.
           '0': # NPC的ID. 使用/npc select选中NPC后可通过/npc id查询该NPC的ID. (*必填*)
@@ -41,7 +35,7 @@ mission_template: # 任务ID, 必须唯一, 可自定义.
             is-temp: false
         messages: # 该步骤完成后向玩家显示的信息.
         - '<&a>恭喜你完成了第1步!'
-        messages_fail: # 该步骤失败后向玩家显示的信息.
+        messages_fail: # 在步骤任务失败时向玩家显示的信息.
         - '<&a>第1步失败了, 任务流程已终止!'
         sounds: # 该步骤完成后向玩家播放的音效.
           'entity_player_levelup':
