任务系统正式上线

--- a/dialogs.yml
+++ b/dialogs.yml
@@ -1,8 +1,11 @@
-guide_1:
-  trigger: 'join' # 对话触发方法. (*必填*)
-  npc: 0 # 对话绑定的NPC. 玩家点击指定NPC时会显示该对话, 并且只有在靠近该NPC时才能选择对话选项.
+dialog_template: # 对话ID, 必须唯一, 可自定义.
+  trigger: 'manual' # 对话触发方法. 选填项: manual(只能由其它系统激活), join(加入游戏时自动激活). (*必填*)
   priority: 0 # 优先级, 数字越小则优先级越高, 当有多个对话可以被触发时, 优先级最高的将被显示.
-  single-use: true # 是否为一次性对话, 即玩家进行过选择后, 对话不再作用于该玩家. (*必填*)
+  requirements: # 对话在什么条件下才会显示给玩家.
+    linked-npcs: # 对话绑定的NPC, 需填写flag名称. 玩家靠近任一NPC时才会显示该对话.
+    - 'kachesiji'
+    missions-in-progress: # 进行中的任务步骤.
+      guide: '1'
   content:
   - '<&0>您好,<player.name>!<n><n>欢迎加入MINEZ,一个基于原版生存玩法开发的末日题材战争服务器.<n><n>您将扮演一位在末世中幸存下来的人,并以您希望的任何手段活下去.您将与恶劣的自然环境展开对抗,在乱世中寻找生存下去的希望.<n><n>您将逐步学习如何收集雨水、种植蔬菜,再到制造枪支和'
   - '<&0>特殊方块,您将慢慢发展起自己的基地.您也可以和信赖的玩家一同战斗,与其分享物资、同甘共苦,一同见证你们的奋斗历程.<n><n>同时您也必须提防其他幸存者,通过建立陷阱、设置基地防御建筑,将你们的心血保护起来,避免落入他人手中.<n><n>当然,您也可以组建自己的侵略军团,以屠杀其他幸存者为生,成为他们的梦魇...'
@@ -10,6 +13,8 @@ guide_1:
   options: # 对话选项及选择后的影响, 无影响则留空. (*必填*)
     '1':
       requirements: # 选择该选项所需的条件. 不符合条件的选项, 在对话时显示为问号以进行加密.
+        linked-npcs: # 选项绑定的NPC, 需填写flag名称. 玩家靠近这些NPC时才能使用该选项.
+        - 'kachesiji'
         missions-in-progress: # 进行中的任务步骤.
           guide: '1'
       missions:
@@ -22,9 +27,11 @@ guide_1:
         destroy-missions: # 选择后导致失败的任务.
         - 'mission_5'
         - 'mission_6'
+      player-commands: # 选择后将由玩家执行的指令. (开头不加"/"符号)
+      - 'randomteleport'
       messages: # 选择后出现的信息.
       - '<&a>你选择了第1项!'
       - '<&e>你真聪明!'
-    'default': # 如果选项不为上述数字ID, 则触发本条影响.
+    'default': # 如果选项不为上述数字ID, 则触发本条影响. (*必填*)
       messages:
       - '<&a>你选择了一个备用项!'
